# OpenVspController

./: .gitignore  API_OpenVSP_rotta.ipynb  README.md  bug_report.txt  environment.yml  pyproject.toml  requirements.txt  run_project.bat  run_wrapper.py
app/: streamlit_app.py
exports/: all_parameters.csv  all_parameters.txt
interpreter/: repo_runtime.json
libs/alembic-1.18.4.dist-info/: RECORD
libs/babel-2.18.0.dist-info/: RECORD
libs/charset_normalizer-3.4.6.dist-info/: RECORD
libs/charset_normalizer-3.4.7.dist-info/: RECORD
libs/debugpy-1.8.20.dist-info/: RECORD
libs/fonttools-4.62.1.dist-info/: RECORD
libs/httpx-0.28.1.dist-info/: RECORD
libs/ipython-9.12.0.dist-info/: RECORD
libs/json5-0.14.0.dist-info/: RECORD
libs/jsonpointer-3.1.1.dist-info/: RECORD
libs/jsonschema-4.26.0.dist-info/: RECORD
libs/jupyter_client-8.8.0.dist-info/: RECORD
libs/jupyter_core-5.9.1.dist-info/: RECORD
libs/jupyter_events-0.12.0.dist-info/: RECORD
libs/jupyter_server-2.17.0.dist-info/: RECORD
libs/jupyterlab-4.5.6.dist-info/: RECORD
libs/mako-1.3.10.dist-info/: RECORD
libs/markdown_it_py-4.0.0.dist-info/: RECORD
libs/nbclient-0.10.4.dist-info/: RECORD
libs/nbconvert-7.17.0.dist-info/: RECORD
libs/nbconvert-7.17.1.dist-info/: RECORD
libs/nbformat-5.10.4.dist-info/: RECORD
libs/numpy-2.4.4.dist-info/: RECORD
libs/optuna-4.8.0.dist-info/: RECORD
libs/plotly-6.6.0.dist-info/: RECORD
libs/pyaml-26.2.1.dist-info/: RECORD
libs/pygments-2.20.0.dist-info/: RECORD
libs/scikit_optimize-0.10.2.dist-info/: RECORD
libs/send2trash-2.1.0.dist-info/: RECORD
libs/streamlit-1.55.0.dist-info/: RECORD
models/: VESPA.ALL.taglist  VESPA.adb.cases  VESPA.csf  VESPA.flt  VESPA.group.0  VESPA.group.1  VESPA.history  VESPA.lod  VESPA.slc  VESPA.stab  VESPA.vkey  VESPA.vsp3  VESPA.vspaero  VESPA.vspgeom  VESPA2.ALL.taglist  VESPA2.ControlSurfaces.taglist  VESPA2.adb  VESPA2.adb.cases  VESPA2.csf  VESPA2.group.0  VESPA2.group.1  VESPA2.history  VESPA2.lod  VESPA2.polar  VESPA2.slc  VESPA2.vkey  VESPA2.vsp3  VESPA2.vspaero  VESPA2.vspgeom  VESPA2WingGeom_Surf0_Ailerons.tag  VESPA2WingGeom_Surf1_Ailerons.tag  VESPA2_MassProps.txt  VESPAVtail_Surf0_Ruddervator.tag  VESPAVtail_Surf1_Ruddervator.tag  VESPA_MassProps.txt
notebooks/: main_analysis.ipynb
scripts/: bootstrap_pip.py  bootstrap_python_runtime.py  run_project.ps1  verify_setup.py
vspopt/: __init__.py  analytical_checks.py  model.py  notebook_helpers.py  openvsp_runtime.py  optimization.py  plotting.py  postprocess.py  reporting.py  utils.py  vspaero.py  wrapper.py
(+6 files in other folders)
