[project]
name = "openvspcontroller"
version = "0.1.0"
description = "Controller per OpenVSP con Python 3.13"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "ipykernel",
    "nbconvert", # <-- Aggiunto per convertire ed eseguire il notebook
    "jupyter"    # <-- Aggiunto per gestire l'esecuzione
]

[tool.uv]
managed = true