[project]
name = "openvspcontroller"
version = "0.1.0"
description = "Controller per OpenVSP con Python 3.13"
readme = "README.md"
# === MODIFICA CRITICA PER RISOLVERE IL BUG ===
# Prima era ">=3.13" → uv scaricava automaticamente Python 3.14 (incompatibile con OpenVSP).
# Ora è ">=3.13,<3.14" → uv userà SEMPRE Python 3.13.x (l'unica versione per cui
# il file _vsp.pyd incluso in OpenVSP-3.48.2-win64 funziona).
# Questa è la scelta più robusta e futura-proof: il binario OpenVSP è compilato
# contro python313.dll. Qualsiasi altra versione causa esattamente l'errore DLL load failed.
requires-python = ">=3.13,<3.14"


# nuova versione in cui è richiesta esplicitamente una versione minima delle dipendenze
# questa lista di versioni è tarata per OpenVsp 3.48.2
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "optuna>=3.5",
    "plotly>=5.18",
    "ipykernel>=6.0",
    "nbconvert>=5.9",
    "jupyter>=4.0",
]
# in caso di problemi cambiare la versione (o non richiederla affatto)

[tool.uv]
managed = true
